@@ -18,7 +18,7 @@ requires-python = ">=3.11"
 dependencies = [
     "click",
     "click-aliases",
-    "find-work>=0.91",
+    "find-work>=0.990",
     "gentoopm<2",
     "pydantic<3,>=2",
     "repology-client<2,>=0.0.2",
@@ -44,7 +44,7 @@ test = [
     "pytest-import-check",
 ]
 
-[project.entry-points."find_work.plugins"]
+[project.entry-points."find_work.plugins.v1"]
 repology = "find_work.plugins.repology"
 
 [project.urls]
